--- a/time-machine-reverse/style.css
+++ b/time-machine-reverse/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,700|Quattrocento:700');
 
 body {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: normal;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: lighter;
     background: white;
     overflow: hidden;
 }
@@ -78,14 +78,14 @@ h2 {
     width: 100%;
     top: 0;
     left: 0;
-    margin-top: 44px;
+    margin-top: 24px;
     background-size: cover;
     background-repeat: no-repeat;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 980px) {
     .outerContainer {
-        margin: 20px 0px 30px 0px;
+        margin-top: 44px;
         background-size: cover;
         background-repeat: no-repeat;
     }
@@ -94,40 +94,26 @@ h2 {
 .container {
     display: block;
     max-width: 600px;
-    max-height: 100%;
     margin: 0 auto;
-    padding: 40px;
-    background: white;
-    border: 1px solid black;
-}
-
-@media screen and (max-width: 500px) {
-
-.container {
-    display: block;
-    max-width: 400px;
-    max-height: 1200px;
-    margin: 5%;
     padding: 20px;
+    padding-top: 4em;
     background: white;
-    border: 1px solid black;
 }
 
-}  
 .switched .container {
     transition: background-color 0.6s;
 }
 
 p {
-    font-size: 14pt;
-    color: #000;
+    font-size: 13pt;
+    color: #888;
     line-height: 1.7em;
-    font-weight: normal;
+    font-weight: lighter;
 }
 
 a {
     font-weight: 700;
-    color: #cf2e2e;
+    color: #b97c2c;
     font-family: sans-serif;
     transition: color 0.6s;
     text-decoration: none;
@@ -144,7 +130,7 @@ strong {
 }
 
 img {
-    text-align: center;
+    display: block;
     margin: 0 auto;
     max-width: 100%;
 }
@@ -198,14 +184,13 @@ img {
 }
 
 #controls {
-    z-index: 2;
+    z-index: 4;
     font-size: 9pt;
     text-align: center;
-    padding-top: 24px;
+    padding-bottom: 6px;
     position: fixed;
-    right: 0px;
-    left: 0px;
-    top: 0px;
+    right: 14px;
+    top: 4px;
     user-select: none;
     background: white;
     transition: color 0.6s, background 0.6s;
@@ -219,15 +204,15 @@ img {
     content: " | ";
 }
 
-// @media screen and (max-width: 980px) {
-//    #controls {
-//        z-index: 2;
-//        padding-top: 24px;
-//        top: 0;
-//        left: 0;
-//        right: 0;
-//    }
-// }
+@media screen and (max-width: 980px) {
+    #controls {
+        z-index: 2;
+        padding-top: 24px;
+        top: 0;
+        left: 0;
+        right: 0;
+    }
+}
 
 /* 
   Dark Theme (Added in Inky 0.10.0)
@@ -251,12 +236,8 @@ body.dark {
     background: black;
 }
 
-.dark p {
-    color: #fff;
-}
-
 .dark a {
-    color: #cf2e2e;
+    color: #cc8f1a;
     transition: color 0.6s;
 }
 
@@ -278,8 +259,4 @@ body.dark {
 
 .dark #controls {
     background: black;
-}
-
-.dark .container {
-    border: 1px solid white;
 }
