--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,24 @@
 @import url("./fonts.css");
 @import url("./base.css");
 @import url("./utilities.css");
-@import url("./components.css");
+@import url("./components/primary.css");
+@import url("./components/secondary.css");
 @import url("./theme.css");
+
+/* ==================================== */
+/* CONTAINERS */
+/* ==================================== */
+/* Enables <iframe> support work on itch.io when using mobile iOS */
+#root {
+  /* margin: 20px 0px 30px 0px; */
+  /* background-size: cover; */
+  /* background-repeat: no-repeat; */
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  justify-content: start;
+  align-items: center;
+}
 
 /* ==================================== */
 /* BREAKPOINTS */
