various css changes

--- a/styles/_variables.css
+++ b/styles/_variables.css
@@ -6,7 +6,7 @@
   font-size: 0.625rem;
 
   --light: hsl(0, 0%, 98%);
-  --dark: hsl(0, 0%, 20%);
+  --dark: hsl(0, 0%, 12%);
 
   --gray: hsl(0, 0%, 50%);
   --gray-light: hsl(0, 0%, 70%);
@@ -14,8 +14,10 @@
 
   --red: hsl(0, 71%, 50%);
 
-  --text-base-size: 1.6rem;
+  --text-base-size: 1.8rem;
   --text-base-line-height: 1.7rem;
 
-  --story-choice-size: 1.8rem;
+  --header-height: 6rem;
+
+  --story-choice-size: 2rem;
 }
