--- a/styles/components/primary.css
+++ b/styles/components/primary.css
@@ -3,10 +3,21 @@
 /* ==================================== */
 
 #header {
+  padding-top: 10px;
+  width: 100%;
+  z-index: 1;
+  height: var(--header-height);
+  position: fixed;
+  top: 0;
   display: flex;
   flex-direction: column;
   justify-content: start;
   align-items: center;
+  gap: 10px;
+  background-color: var(--light);
+  transition: color 0.6s, background 0.6s;
+  /* border: 1px solid var(--light); */
+  box-shadow: 0px 10px 7px 0px var(--light);
 }
 
 #story {
@@ -14,6 +25,7 @@
   position: relative;
   padding: 20px;
   border: 1px solid var(--dark);
+  margin-top: calc(var(--header-height) + 20px);
 }
 
 /* All story children */
@@ -26,24 +38,18 @@
 /* CONTROLS */
 /* ==================================== */
 #controls {
-  /* z-index: 2; */
-  /* font-size: 9pt; */
-  /* text-align: center; */
-  /* padding-top: 24px; */
-  /* position: fixed; */
-  /* right: 0px; */
-  /* left: 0px; */
-  /* top: 0px; */
+  display: flex;
+  justify-content: center;
+  gap: 10px;
   user-select: none;
-  /* background: white; */
-  transition: color 0.6s, background 0.6s;
+  /* transition: color 0.6s, background 0.6s; */
+}
+
+#controls span {
+  color: var(--red);
+  font-weight: 300;
 }
 
 #controls [disabled] {
   color: var(--gray-light);
-}
-
-/* Controls separator */
-#controls > *:not(:last-child):after {
-  content: " | ";
 }
