--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,16 +9,12 @@
 /* ==================================== */
 /* CONTAINERS */
 /* ==================================== */
-/* Enables <iframe> support work on itch.io when using mobile iOS */
 #root {
-  /* margin: 20px 0px 30px 0px; */
-  /* background-size: cover; */
-  /* background-repeat: no-repeat; */
   display: flex;
   flex-direction: column;
-  row-gap: 20px;
   justify-content: start;
   align-items: center;
+  padding: 0 20px;
 }
 
 /* ==================================== */
