--- a/styles/components/primary.css
+++ b/styles/components/primary.css
@@ -15,9 +15,9 @@
   align-items: center;
   gap: 10px;
   background-color: var(--light);
-  transition: color 0.6s, background 0.6s;
-  /* border: 1px solid var(--light); */
-  box-shadow: 0px 10px 7px 0px var(--light);
+  /* border: 1px solid var(--dark); */
+  /* transition: color 0.6s, background 0.6s; */
+  transition: all 0.6s ease-in-out;
 }
 
 #story {
@@ -38,11 +38,32 @@
 /* CONTROLS */
 /* ==================================== */
 #controls {
+  position: relative;
+  width: 100%;
   display: flex;
   justify-content: center;
   gap: 10px;
   user-select: none;
+  /* background-color: var(--light); */
+  /* box-shadow: 0px 17px 4px 0px var(--light); */
+  /* transition: opacity 0.6s ease-in-out; */
   /* transition: color 0.6s, background 0.6s; */
+  /* transition: all 0.6s ease-in-out; */
+}
+
+/* #controls::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  box-shadow: 0px 17px 4px 0px var(--light);
+  transition: opacity 0.6s ease-in-out;
+} */
+
+#controls > * {
+  line-height: 1;
 }
 
 #controls span {
