--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,48 +1,8 @@
 @import url("./_variables.css");
+@import url("./containers.css");
 @import url("./fonts.css");
 @import url("./base.css");
 @import url("./utilities.css");
 @import url("./components/primary.css");
 @import url("./components/secondary.css");
 @import url("./theme.css");
-
-/* ==================================== */
-/* CONTAINERS */
-/* ==================================== */
-#root {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: center;
-  padding: 0 20px;
-}
-
-/* ==================================== */
-/* BREAKPOINTS */
-/* ==================================== */
-@media screen and (min-width: 600px) {
-  #root {
-    /* position: absolute; */
-    /* display: block; */
-    /* margin: 0; */
-    /* padding: 0; */
-    /* -webkit-overflow-scrolling: touch; */
-    /* overflow: scroll; */
-    /* overflow-x: hidden; */
-    /* height: 100%; */
-    /* width: 100%; */
-    /* top: 0; */
-    /* left: 0; */
-    /* margin-top: 44px; */
-    /* background-size: cover; */
-    /* background-repeat: no-repeat; */
-  }
-
-  #story {
-    /* display: block; */
-    /* max-width: 600px; */
-    /* max-height: 100%; */
-    /* margin: 0 auto; */
-    /* padding: 40px; */
-  }
-}
