--- a/styles/components/primary.css
+++ b/styles/components/primary.css
@@ -15,9 +15,7 @@
   align-items: center;
   gap: 10px;
   background-color: var(--light);
-  /* border: 1px solid var(--dark); */
-  /* transition: color 0.6s, background 0.6s; */
-  transition: all 0.6s ease-in-out;
+  transition: font-size 0.6s;
 }
 
 #story {
@@ -31,7 +29,7 @@
 /* All story children */
 #story > * {
   opacity: 1;
-  transition: opacity 1s;
+  transition: opacity 0.6s;
 }
 
 /* ==================================== */
@@ -44,23 +42,7 @@
   justify-content: center;
   gap: 10px;
   user-select: none;
-  /* background-color: var(--light); */
-  /* box-shadow: 0px 17px 4px 0px var(--light); */
-  /* transition: opacity 0.6s ease-in-out; */
-  /* transition: color 0.6s, background 0.6s; */
-  /* transition: all 0.6s ease-in-out; */
 }
-
-/* #controls::after {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  box-shadow: 0px 17px 4px 0px var(--light);
-  transition: opacity 0.6s ease-in-out;
-} */
 
 #controls > * {
   line-height: 1;
