--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url("./_variables.css");
+@import url("./variables.css");
 @import url("./containers.css");
 @import url("./fonts.css");
 @import url("./base.css");
