--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,3 +6,4 @@
 @import url("./components/primary.css");
 @import url("./components/secondary.css");
 @import url("./theme.css");
+@import url("./animation.css");
