--- a/styles/base.css
+++ b/styles/base.css
@@ -1,14 +1,15 @@
 /* ==================================== */
 /* BASIC ELEMENTS */
 /* ==================================== */
-p {
-  font-size: var(--text-base);
-  line-height: 1.7em;
-  font-weight: normal;
+
+body {
+  font-family: var(--font-base-custom, var(--font-base));
+  font-size: var(--font-base-size);
+  line-height: var(--font-base-line-height);
+  color: var(--dark);
 }
 
 a {
-  font-weight: 700;
   color: var(--red);
   text-decoration: none;
   transition: color 0.6s;
@@ -22,4 +23,23 @@ a:hover {
 img {
   display: inline-block;
   margin: 10px;
+}
+
+/* ==================================== */
+/* BREAKPOINTS */
+/* ==================================== */
+/* 768 */
+/* ==================================== */
+@media screen and (min-width: 768px) {
+  img {
+    margin: 12px;
+  }
+}
+/* ==================================== */
+/* 1024 */
+/* ==================================== */
+@media screen and (min-width: 1024px) {
+  img {
+    margin: 15px;
+  }
 }
