--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,7 @@
 @import url("./variables.css");
 @import url("./containers.css");
-@import url("./fonts.css");
 @import url("./base.css");
 @import url("./utilities.css");
-@import url("./components/primary.css");
-@import url("./components/secondary.css");
+@import url("./main.css");
 @import url("./theme.css");
 @import url("./animation.css");
