+ Add style for 'end' class to bold & center text

--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -1,6 +1,10 @@
-/* UTILITIES */
+/* STORY */
+.end {
+  text-align: center;
+  font-weight: bold;
+}
 
+/* VISUAL */
 .block {
   display: block;
 }
-
